deploy/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devstack-charts-repo
  namespace: devstack
spec:
  selector:
    app: devstack-charts
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
